<resources>
    <string name="app_name">Trash</string>
    <string name="garbage_sorting">垃圾分类</string>
    <string name="enter_items">请输入物品</string>
    <string name="recyclables">可回收垃圾</string>
    <string name="hazardous_waste">有害垃圾</string>
    <string name="kitchen_garbage">厨余垃圾</string>
    <string name="dry_refuse">干垃圾</string>
    <string name="enter_item_name">请输入物品名</string>
    <string name="knowledge_blind_spot">触及到了知识盲区</string>
    <string name="manual_input">手动输入</string>
    <string name="word_input">文字输入</string>
    <string name="speech_input">语音输入</string>
    <string name="confirm_exit">再按一次退出程序</string>
    <string name="skip">跳过</string>
    <string name="no_data">暂无数据</string>
    <string name="in_the_switch">语言设置</string>
    <string name="cn">中文（简体）</string>
    <string name="en">英语</string>
    <string name="tw">中文（繁体）</string>
    <string name="language_select">语言选择</string>
    <string name="is_language">已是系统当前语言，无需重复选择！</string>
    <string name="bounced_a">弹框展开</string>
    <string name="switch_on">开关展开</string>
    <string name="img_input">图像输入</string>
    <string name="not_camera">未获取到相机权限</string>
    <string name="token_isEmpty">token为空</string>
    <string name="news_info">新闻详情</string>
    <string name="history">历史记录</string>
    <string name="delAll">全删</string>
    <string name="open_network">请联网使用</string>
    <string name="nothing">什么都没有</string>
    <string name="not_result">未获得相应的识别结果</string>
    <string name="news_isEmpty">垃圾分类新闻为空</string>
    <string name="no_news_info">无法显示新闻详情</string>
    <string name="permission_no_pass">权限未通过，你不能使用该功能</string>
    <string name="item_being_searched">正在搜索物品：</string>
    <string name="network_image_url">网络图片Url</string>

    <string name="network_image">网络图片</string>
    <string name="photo_album">相册图片</string>
    <string name="take_pictures">拍照图片</string>

    <string name="recognition_result">识别结果</string>
    <string name="classification_result">分类结果</string>

    <string name="confirm_delete_all">确定删除全部记录吗？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <string name="load_wallpaper">下载壁纸</string>
    <string name="set_wallpaper">设为壁纸</string>
    <string name="wallpaper_manage">壁纸管理</string>

    <string name="save_wallpaper">图片保存在%s文件夹下</string>
    <string name="save_wallpaper_failure">保存图片失败，请稍后重试</string>

    <string name="refreshing">正在刷新...</string>
    <string name="refresh_finish">刷新完成</string>
</resources>